# roc-plugin-example

./: .gitignore  LICENSE  README  README.md  build_all.sh  build_game.sh  build_plugin.sh  bundle.sh  colors  colors.dylib  colors.roc  glue.sh  old_plans_and_notes.txt  plugin_logic.roc  roc_plugin.roc  run.sh  run_plugin_as_standalone.sh
eventual_platform_interface/: README.md  plugin_logic.roc
eventual_platform_interface/platform/: Game.roc  main.roc
game/: Cargo.toml
game/src/: main.rs
generated_glue/: README.md
handrolled_glue/roc_app/: Cargo.toml
handrolled_glue/roc_app/src/: aarch64.rs  x86.rs  x86_64.rs
platform/: Cargo.toml  Game.roc  main.roc  rust-toolchain.toml
platform/glue/roc_app/src/: aarch64.rs  x86.rs
platform/src/: lib.rs
platform_wrapper/: Cargo.toml  build.rs  rust-toolchain.toml
platform_wrapper/src/: lib.rs
platform_wrapper/tests/: heartbeat.rs
plugin_load_test/: Cargo.toml
plugin_load_test/.cargo/: config
plugin_load_test/src/: main.rs  roc_ffi.rs
rust-platform/: Cargo.toml
rust-platform/src/: lib.rs  main.rs
