[package]
name = "game"
version = "0.1.0"
edition = "2021"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3

# Enable minimal optimizations in dev build for faster build times
[profile.dev]
opt-level = 1


[dependencies]
# Use dynamic linking for bevy to have faster build times in development
bevy = {version="0.12.1", features=["dynamic_linking"]}

